--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
 
-    <title>Vite + React + TS</title>
+    <title>Notes</title>
   </head>
   <body class="bg-slate-900 text-slate-50 antialiased">
     <div id="root"></div>
